@@ -720,6 +720,34 @@ bool compress_saves()
 	return prefs["compress_saves"] != "no";
 }
 
+bool chat_timestamp()
+{
+	return prefs["chat_timestamp"] == "yes";
+}
+
+void set_chat_timestamp(bool value)
+{
+	prefs["chat_timestamp"] = value ? "yes" : "no";
+}
+
+int chat_lines()
+{
+	// defaults to 6 chat log lines displayed
+	static const int default_value = 6;
+	const string_map::const_iterator lines = prefs.values.find("chat_lines");
+	if(lines != prefs.values.end() && lines->second.empty() == false)
+		return atoi(lines->second.c_str());
+	else
+		return default_value;
+}
+
+void set_chat_lines(int lines)
+{
+	std::stringstream stream;
+	stream << lines;
+	prefs["chat_lines"] = stream.str();
+}
+
 std::set<std::string> &encountered_units() {
 	return encountered_units_set;
 }
