@@ -190,19 +190,19 @@ private:
 	const config* get_advanced_pref() const;
 	void set_advanced_menu();
 
-	gui::slider music_slider_, sound_slider_, scroll_slider_, gamma_slider_;
+	gui::slider music_slider_, sound_slider_, scroll_slider_, gamma_slider_, chat_lines_slider_;
 	gui::button fullscreen_button_, turbo_button_, show_ai_moves_button_,
 	            show_grid_button_, show_lobby_joins_button_, show_floating_labels_button_, turn_dialog_button_,
 	            turn_bell_button_, show_team_colours_button_, show_colour_cursors_button_,
 	            show_haloing_button_, video_mode_button_, theme_button_, hotkeys_button_, gamma_button_,
-				flip_time_button_, advanced_button_, sound_button_, music_button_;
-	gui::label music_label_, sound_label_, scroll_label_, gamma_label_;
+				flip_time_button_, advanced_button_, sound_button_, music_button_, chat_timestamp_button_;
+	gui::label music_label_, sound_label_, scroll_label_, gamma_label_, chat_lines_label_;
 	unsigned slider_label_width_;
 
 	gui::menu advanced_;
 	int advanced_selection_;
 
-	enum TAB { GENERAL_TAB, DISPLAY_TAB, SOUND_TAB, ADVANCED_TAB };
+	enum TAB { GENERAL_TAB, DISPLAY_TAB, SOUND_TAB, MULTIPLAYER_TAB, ADVANCED_TAB };
 	TAB tab_;
 	display &disp_;
 	const config& game_cfg_;
@@ -211,7 +211,7 @@ private:
 preferences_dialog::preferences_dialog(display& disp, const config& game_cfg)
 	: gui::preview_pane(disp.video()),
 	  music_slider_(disp.video()), sound_slider_(disp.video()),
-	  scroll_slider_(disp.video()), gamma_slider_(disp.video()),
+	  scroll_slider_(disp.video()), gamma_slider_(disp.video()), chat_lines_slider_(disp.video()),
 	  fullscreen_button_(disp.video(), _("Toggle Full Screen"), gui::button::TYPE_CHECK),
 	  turbo_button_(disp.video(), _("Accelerated Speed"), gui::button::TYPE_CHECK),
 	  show_ai_moves_button_(disp.video(), _("Skip AI Moves"), gui::button::TYPE_CHECK),
@@ -228,10 +228,11 @@ preferences_dialog::preferences_dialog(display& disp, const config& game_cfg)
 	  hotkeys_button_(disp.video(), _("Hotkeys")),
 	  gamma_button_(disp.video(), _("Adjust Gamma"), gui::button::TYPE_CHECK),
 	  flip_time_button_(disp.video(), _("Reverse Time Graphics"), gui::button::TYPE_CHECK),
+          chat_timestamp_button_(disp.video(), _("Chat Timestamping"), gui::button::TYPE_CHECK),
 	  sound_button_(disp.video(), _("Sound effects"), gui::button::TYPE_CHECK),
 	  music_button_(disp.video(), _("Music"), gui::button::TYPE_CHECK),
 	  advanced_button_(disp.video(), "", gui::button::TYPE_CHECK),
-	  music_label_(disp.video(), _("Music Volume:")), sound_label_(disp.video(), _("SFX Volume:")),
+	  music_label_(disp.video(), _("Music Volume:")), sound_label_(disp.video(), _("SFX Volume:")), chat_lines_label_(disp.video(), ""),
 	  scroll_label_(disp.video(), _("Scroll Speed:")), gamma_label_(disp.video(), _("Gamma:")),
 	  slider_label_width_(0), advanced_(disp.video(),std::vector<std::string>()), advanced_selection_(-1),
 	  tab_(GENERAL_TAB), disp_(disp), game_cfg_(game_cfg)
@@ -263,6 +264,16 @@ preferences_dialog::preferences_dialog(display& disp, const config& game_cfg)
 	scroll_slider_.set_max(100);
 	scroll_slider_.set_value(scroll_speed());
 	scroll_slider_.set_help_string(_("Change the speed of scrolling around the map"));
+
+        chat_lines_slider_.set_min(1);
+        chat_lines_slider_.set_max(20);
+        chat_lines_slider_.set_value(chat_lines());
+        chat_lines_slider_.set_help_string(_("Set the amount of chat lines shown"));
+        // Have the tooltip appear over the static "Chat lines" label, too.
+        chat_lines_label_.set_help_string(_("Set the amount of chat lines shown"));
+
+        chat_timestamp_button_.set_check(chat_timestamp());
+        chat_timestamp_button_.set_help_string(_("Add a timestamp to chat messages"));
 
 	gamma_button_.set_check(adjust_gamma());
 	gamma_button_.set_help_string(_("Change the brightness of the display"));
@@ -378,6 +389,14 @@ void preferences_dialog::update_location(SDL_Rect const &rect)
 	                        rect.w - slider_label_width_ - border, 0 };
 	music_slider_.set_location(music_rect);
 
+        // Multiplayer tab
+        ypos = rect.y;
+        chat_lines_label_.set_location(rect.x, ypos);
+        SDL_Rect chat_lines_rect = { rect.x + slider_label_width_, ypos,
+                                     rect.w - slider_label_width_ - border, 0 };
+        chat_lines_slider_.set_location(chat_lines_rect);
+        ypos += item_interline; chat_timestamp_button_.set_location(rect.x, ypos);
+
 	//Advanced tab
 	ypos = rect.y;
 	advanced_.set_location(rect.x,ypos);
@@ -444,8 +463,17 @@ void preferences_dialog::process_event()
 	if (flip_time_button_.pressed())
 		set_flip_time(flip_time_button_.checked());
 
+        if (chat_timestamp_button_.pressed())
+                set_chat_timestamp(chat_timestamp_button_.checked());
+
 	set_scroll_speed(scroll_slider_.value());
 	set_gamma(gamma_slider_.value());
+        set_chat_lines(chat_lines_slider_.value());
+
+        // display currently select amount of chat lines
+        std::stringstream buf;
+        buf << _("Chat Lines: ") << chat_lines_slider_.value();
+        chat_lines_label_.set_text(buf.str());
 
 	if(advanced_.selection() != advanced_selection_) {
 		advanced_selection_ = advanced_.selection();
@@ -546,6 +574,11 @@ void preferences_dialog::set_selection(int index)
 	sound_label_.hide(hide_sound);
 	sound_slider_.hide(hide_sound);
 
+        const bool hide_multiplayer = tab_ != MULTIPLAYER_TAB;
+        chat_lines_label_.hide(hide_multiplayer);
+        chat_lines_slider_.hide(hide_multiplayer);
+        chat_timestamp_button_.hide(hide_multiplayer);
+
 	const bool hide_advanced = tab_ != ADVANCED_TAB;
 	advanced_.hide(hide_advanced);
 	advanced_button_.hide(hide_advanced);
@@ -562,6 +595,7 @@ void show_preferences_dialog(display& disp, const config& game_cfg)
 	items.push_back(pre + "general.png" + sep + sgettext("Prefs section^General"));
 	items.push_back(pre + "display.png" + sep + sgettext("Prefs section^Display"));
 	items.push_back(pre + "music.png" + sep + sgettext("Prefs section^Sound"));
+	items.push_back(pre + "multiplayer.png" + sep + sgettext("Prefs section^Multiplayer"));
 	items.push_back(pre + "advanced.png" + sep + sgettext("Advanced section^Advanced"));
 
 	for(;;) {
